[package]
name = "rarrow"
version = "0.0.1"
authors = ["Darin Minamoto <darinm223@gmail.com>"]
edition = "2018"
description = "Another category theory library in Rust"
readme = "README.md"
license = "BSD"
keywords = ["category theory", "higher kinded types", "higher ranked polymorphism", "functional programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
